force-app/main/default/objects/Track__c/fields/DiscNumber__c.field-meta.xml
<CustomField>
    <fullName>DiscNumber__c</fullName>
    <label>Disc Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>