force-app/main/default/objects/Track__c/fields/Explicit__c.field-meta.xml
<CustomField>
    <fullName>Explicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the track has explicit lyrics</description>
    <label>Explicit</label>
    <type>Checkbox</type>
</CustomField>