force-app/main/default/objects/Track__c/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <label>Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalMarkeds</valueSetName>
    </valueSet>
</CustomField>