force-app/main/default/objects/Track__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Tracks</relationshipLabel>
    <relationshipName>Tracks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>