force-app/main/default/objects/Track__c/fields/SpotifyDiscNumber__c.field-meta.xml
<CustomField>
    <fullName>SpotifyDiscNumber__c</fullName>
    <label>Spotify Disc Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>