force-app/main/default/objects/Track__c/fields/SpotifyDurationMs__c.field-meta.xml
<CustomField>
    <fullName>SpotifyDurationMs__c</fullName>
    <label>Spotify Duration Ms</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>