force-app/main/default/objects/Track__c/fields/SpotifyExplicit__c.field-meta.xml
<CustomField>
    <fullName>SpotifyExplicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the track has explicit lyrics</description>
    <label>Spotify Explicit</label>
    <type>Checkbox</type>
</CustomField>