force-app/main/default/objects/Track__c/fields/SpotifyMarkets__c.field-meta.xml
<CustomField>
    <fullName>SpotifyMarkets__c</fullName>
    <label>Spotify Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalMarkeds</valueSetName>
    </valueSet>
</CustomField>