force-app/main/default/objects/Track__c/fields/SpotifyUrl__c.field-meta.xml
<CustomField>
    <fullName>SpotifyUrl__c</fullName>
    <label>Spotify Url</label>
    <type>Url</type>
</CustomField>